# ChannelChat

./: pyproject.toml
chat/: consumers.py  views.py
chat/static/chat/: room.js
chat/templates/chat/: index.html  room.html
core/: settings.py  urls.py
core/static/core/: index.js
core/templates/core/: index.html
